--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.15.2",
     "ibm-watson": "^5.1.0",
+    "request": "^2.88.0",
     "socket.io": "^2.2.0"
   }
 }
